<resources>
    <string name="app_name">Bummer</string>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>

    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="sign_up_ul"><u>Sign up</u></string>
    <string name="sign_in_ul"><u>Sign in</u></string>
    <string name="sign_up">Sign up</string>
    <string name="dbname_users">users</string>
    <string name="hint_confirm_password">confirm password</string>
    <string name="hint_name">name</string>
    <string name="dbname_usersData">usersdata</string>
    <string name="email_verification_prompt">Please check your e-mail for verification link</string>
    <string name="resend_email">resend verification</string>
    <string name="check_verification">check verification</string>
    <string name="forget_password_text">Reset Password</string>
    <string name="forget_password_empty_toast">Enter your email address to send the reset password email to</string>
    <string name="forget_password_sent">Email sent to:</string>
    <string name="title_activity_maps">Map</string>

    <string name="google_map_API_Key">AIzaSyBJUbJZxdNEAkb_3brnA6exQu0WlD3l5sE</string>
    <string name="bottom_profile">Profile</string>
    <string name="bottom_post">Post</string>
    <string name="bottom_map">Map</string>
    <string name="hint">Say something</string>
    <string name="share">Share</string>

    <string name="selected_bitmap">selected_bitmap</string>

    <string name = "service_not_available">service_not_available</string>
    <string name = "invalid_lat_long_used">invalid_lat_long_used</string>
    <string name="dbname_location">location</string>
    <string name="permission_rationale">Bummer is a location aware app and we display photo based on your location.</string>
    <string name="permission_denied_explanation">Since you decide to not give us permission, you will not be enjoying the full functionality of the app.</string>
</resources>